@@ -1,5 +1,6 @@
 installation-guide (2009xxxx) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Switch over from Lenny to Squeeze. Current kernel is 2.6.29.
   * Change the Debian designation for the ARM architecture from arm to armel.
     The internal 'arch-spec' and file naming convention remains "arm" in order
@@ -8,6 +9,12 @@ installation-guide (2009xxxx) UNRELEASED; urgency=low
     for serial console installs. Based on a patch suggested by Samuel Thibault.
     Closes: #524666.
   * Update copyright for 2009.
+
+  [ Martin Michlmayr ]
+  * Updates for ARM (armel):
+    - Remove sections about Netwinder/CATS, which are no longer supported.
+    - Update the "supported hardware" table.
+    - Add a section about Marvell's Kirkwood, which is now supported.
 
  -- Frans Pop <fjp@debian.org>  Tue, 28 Apr 2009 18:13:46 +0200
 
